@@ -1,4 +1,5 @@
 [3.0.1]
+- Hotfix for "floating" `Group` that contained `RadialGroup`.
 - More efficient reset of the hover on mouse-exit.
 - The `background` image can now be a `Drawable` as well (but this will prevent you from using `rotateBy()`).
 
